# aoc-2021

./: Cargo.toml  README.md
src/: main.rs  utils.rs
src/days/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day2.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  mod.rs
src/utils/: grid.rs  mod.rs
src/y2021/: day11.rs  day12.rs  day13.rs  day16.rs  day21.rs  day25.rs  day3.rs  day4.rs  day5.rs  day6.rs  day9.rs  mod.rs
src/y2022/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day2.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs
src/y2022/data/: day1.zst
