[package]
name = "aoc-2021"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.51"
chrono = "0.4.19"
clap = { version = "3.0.0-rc.0", features = ["derive"] }
dotenv = "0.15.0"
itertools = "0.10.1"
owo-colors = "3.1.1"
seq-macro = "0.2.2"
ureq = "2.3.1"
zstd = "0.9.0"

[features]
