[package]
name = "aoc-2021"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.52"
chrono = "0.4.19"
clap = { version = "3.0.7", features = ["derive"] }
dotenv = "0.15.0"
itertools = "0.10.3"
owo-colors = "3.2.0"
seq-macro = "0.3.0"
ureq = "2.4.0"
zstd = "0.9.2"

[features]
