[package]
name = "aoc-2021"
version = "2.0.22"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.52"
clap = { version = "4.0.29", features = ["derive"] }
dotenv = "0.15.0"
itertools = "0.10.3"
owo-colors = "3.2.0"
seq-macro = "0.3.0"
time = "0.3.17"
ureq = "2.4.0"
zstd = "0.12.0"

[features]

[profile.release]
debug = true
